<resources>
    <string name="app_name">Tanam Cerdas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="forum">Sharing with petani</string>
    <string name="guide">Panduan</string>
    <string name="populer_text">Populer</string>
    <string name="navigateup_text">navigateUp</string>
    <string name="all">Semua\n</string>
    <string name="searchbar_hint">Search here</string>
</resources>